@@ -212,3 +212,9 @@
 	* Added EINA_C_ARRAY_LENGTH, a macro that returns  the length of a
 	standard C array.
 
+2012-01-31  Tom Hacohen
+
+	* Added an Eina_Stringshare type. It's just a typedef of "const char *"
+	this is a same kind of visual hint for the purpose of the pointer,
+	but again, the two types are interchangeable.
+
